# JniCallJavaDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xiaoyunchengzhu/jni/jnicalljava/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/cppHeader/: calljava.h  convertUtil.h
app/src/main/cpp/cppSouce/: calljava.cpp  convertUtil.cpp
app/src/main/java/com/xiaoyunchengzhu/jni/jnicalljava/: CallTest.java  CalledUtil.java  MainActivity.java  User.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xiaoyunchengzhu/jni/jnicalljava/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
